# NovusProjectDatabase

./: .gitignore  CLAUDE.md  Novus Database PRD v1.md  audio1657028693_transcript.txt  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users.py  002_create_organizations.py  003_create_contacts.py  004_create_tags.py  005_create_projects.py  006_create_project_contacts.py  007_create_project_tags.py  008_add_search_indexes.py  009_create_documents.py  (+24 more)
backend/app/: config.py  database.py  main.py
backend/tests/: test_acl_models.py  test_admin_conflicts.py  test_admin_document_queue.py  test_admin_jobs.py  test_admin_sync_queue.py  test_antivirus.py  test_api_rate_limit.py  test_audit.py  test_audit_api.py  test_audit_integration.py  test_audit_service.py  test_auth_api_token.py  test_auth_bearer.py  test_auth_e2e.py  test_auth_oauth.py  test_auth_rate_limit.py  test_auth_role_mapping.py  test_auto_resolution.py  test_auto_resolution_api.py  test_cache_service.py  test_config.py  test_conflict_service.py  test_contact_acl.py  test_contacts_api.py  test_cron_email_monitor.py  test_cron_jira_refresh.py  test_csv_export.py  test_document_download_integration.py  test_document_queue_service.py  test_document_tag_suggester.py  test_documents_api.py  test_email_parsing.py  test_embedding_service.py  test_enum_consistency.py  test_exceptions.py  test_feedback_api.py  test_file_utils.py  test_file_validation.py  test_import_service.py  test_import_validation.py  (+36 more)
(+521 files in other folders)
